# ledger-nano-app

./: Pipfile  README.md
docker_image/: Dockerfile
ledger-nanos-sdk/src/: ecc.rs
ledger-nanos-ui/: Cargo.toml
rust-app/: .gitignore  Cargo.toml
rust-app/src/: crypto_helpers.rs  diem_types.rs  main.rs  utils.rs
rust-app/test/: sign.py  test_cmds.py
scripts/: build.sh  load.sh  speculos-load.sh
